deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-service
  namespace: 21359-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: photo-service
  template:
    metadata:
      labels:
        app: photo-service
    spec:
      containers:
        - name: photo-service
          image: photo-service:1.2
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
