service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-service
  namespace: 21359-dev
spec:
  selector:
    app: photo-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
