ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-service
  namespace: 21359-dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          backend:
            service:
              name: photo-service
              port:
                number: 8080
          path: /
